--- a/jewellery-frontend/src/components/App/Homepage.css
+++ b/jewellery-frontend/src/components/App/Homepage.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Cormorant', serif;
     margin: 0;
     padding: 0;
-    background-color: #F4E3C3; /* Soft Beige */
+    background-color: #ffffff  /* Soft Beige */
     color: #331919; /* Dark Brown for contrast */
 }
 
