--- a/jewellery-frontend/src/components/App/Homepage.css
+++ b/jewellery-frontend/src/components/App/Homepage.css
@@ -240,7 +240,7 @@ p {
 
 /* Footer */
 .footer {
-    background-color: #770523;
+     background-color: #ffffff;
     color: #F4E3C3;
     text-align: center;
     padding: 25px;
